# fdalvi-pip-tester-package

./: setup.cfg
.github/workflows/: publish_testpypi.yaml
fdalvi_pip_tester/: __main__.py
