[metadata]
name = fdalvi-pip-tester
version = 0.1.0
author = Fahim Dalvi
author_email = faimaduddin@hbku.edu.qa
description = Tester PyPI package
long_description = Tester PyPI package
url = https://github.com/fdalvi/fdalvi-pip-tester-package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
